✨ feat: 更新友链，添加图片

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -169,10 +169,10 @@
       descr: 始于开源，终于完美
       screenshot: https://file.iarc.top/uploads/2024/10/04/1728038241.jpg
 
-    - name: 樊不烦博客
-      link: https://fanbu.fan/
-      avatar: https://fanbu.fan/favicon.png
-      descr: 樊不烦博客(FanBu.Fan)是川渝知名Seo个人日记资源教程分享平台。
+    - name: 纯欲Mvp
+      link: https://www.cymvp.cn
+      avatar: https://www.cymvp.cn/favicon.png
+      descr: 纯欲Mvp(cymvp.cn)樊不烦博客-又纯又欲的纯欲日记，川渝知名资源分享博客之一
       screenshot: 
 
     - name: 阿叶Ayeez的小站
