🔧 build: 修改留言板图片链接

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1106,10 +1106,10 @@ wowjs:
 envelope_comment:
   enable: true #控制开关
   custom_pic:
-    cover: https://tuchuang.voooe.cn/images/2023/01/02/violet.webp #信笺头部图片
-    line: https://tuchuang.voooe.cn/images/2023/01/02/line.webp #信笺底部图片
-    beforeimg: https://tuchuang.voooe.cn/images/2023/01/02/before.webp # 信封前半部分
-    afterimg: https://tuchuang.voooe.cn/images/2023/01/02/after.webp # 信封后半部分
+    cover: /assets/envelope_comment/violet.jpg #信笺头部图片
+    line: /assets/envelope_comment/line.jpg #信笺底部图片
+    beforeimg: /assets/envelope_comment/before.jpg # 信封前半部分
+    afterimg: /assets/envelope_comment/after.jpg # 信封后半部分
   message: #信笺正文，多行文本，写法如下
     - 有什么想问的？
     - 有什么想说的？
